fixed spacing

--- a/static/base.css
+++ b/static/base.css
@@ -7,11 +7,14 @@
 .item-box {
     width: 150px;
     height: 150px;
-    margin-right: 10px;
-    margin-bottom: 10px;
     border-radius: 15px;
     border: 2px solid #808080;
     padding: 20px;
+}
+
+#item-box-wrapper {
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 .container {
